--- a/LOTTE_MART_BA_TEST.ipynb
+++ b/LOTTE_MART_BA_TEST.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "LOTTE MART - BA_TEST.ipynb",
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -42,7 +43,7 @@
         "* Which store is selling well and good at category? Specifically which product?\n",
         "* Which major category (cate-1) is best selling? Detailed analysis for cate-4 and best-selling products in the past time? Give comments on consumer trends (divided into 3 regions: North, Middle, South)\n",
         "* The average of order value and the average value of the product categories ? What are the differences between various product categories?\n",
-        "* For each type of product, how many quantity customers usually buy for 1 purchase?\n",
+        "* For each product category, how many quantity customers usually buy for 1 purchase?\n",
         "* Based on above analyzed data, make an assessment of the forecast to sell for the next 2 weeks\n"
       ]
     },
@@ -126,7 +127,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "iT00p_XZGQOG",
-        "outputId": "887f8884-c543-436c-aa92-2faacb2f7bfb",
+        "outputId": "a46109ee-dba9-499c-a618-50e29385a852",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 915
@@ -136,7 +137,7 @@
         "# View top 5 records(observations) of BA-test-part-1\n",
         "display(df1.head())\n",
         "print('\\n'*1)\n",
-        "print('-'*160)\n",
+        "print('-'*135)\n",
         "print('\\n'*1)\n",
         "# View top 5 records(observations) of BA-test-part-2\n",
         "df2.head()"
@@ -333,7 +334,7 @@
           "text": [
             "\n",
             "\n",
-            "----------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+            "---------------------------------------------------------------------------------------------------------------------------------------\n",
             "\n",
             "\n"
           ],
@@ -513,7 +514,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "rQUfLu3Cejn3",
-        "outputId": "7356d99e-52be-496a-f4b3-d1e8a7255be4",
+        "outputId": "68659d60-4679-49f4-f239-b7143068e31a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 197
@@ -620,7 +621,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "LILrOfAeHb7j",
-        "outputId": "be0c6814-9826-4482-e0b7-ad1edd02a85f",
+        "outputId": "67d5178e-5bba-41b9-d1b1-db1f97e1da67",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 517
@@ -844,7 +845,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "oPXwAYRBEIUU",
-        "outputId": "e5c29160-4f9b-436d-fae0-1064665dd79f",
+        "outputId": "e74c6bad-6c49-409d-ace5-c484e000aa20",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -934,7 +935,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "wNsA5XN7EdUT",
-        "outputId": "b180f830-e195-4b1c-a781-e7f8ab0d301a",
+        "outputId": "6800ba20-928b-4127-cb66-4686fb7e71de",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -996,7 +997,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "NzU2sn0DMmLM",
-        "outputId": "e079b8c7-ecc4-4eb4-950e-64c3e7491631",
+        "outputId": "4198ce9d-f3b8-4fb1-f8c8-c5ae3c0b840d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1060,7 +1061,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "oZRjJzpJKRpq",
-        "outputId": "95e41c73-dea6-4256-b794-7b61b6942c83",
+        "outputId": "7a4935f8-a22a-4008-f750-4226832eb2bf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1106,7 +1107,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "0zpKloplRi0i",
-        "outputId": "72bee114-ffdd-4824-fbba-a9b339d3b6af",
+        "outputId": "1dd2b350-4181-4492-df41-6781988afeeb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 287
@@ -1259,7 +1260,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "6EeatD_Kwhwq",
-        "outputId": "ddad3838-3b83-4f8b-87b7-909e68e744a7",
+        "outputId": "c5306dc7-221f-440b-898b-b6fca2f6850d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1308,7 +1309,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "N5r8R5mabIZs",
-        "outputId": "ddf55190-d89f-4995-88f0-486b6d73183d",
+        "outputId": "c41205aa-bb10-4f94-a246-e0f65657f4da",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 287
@@ -1317,7 +1318,7 @@
       "source": [
         "# Remove order's values > 2276692 VND \n",
         "df=df[df['Sale amt'] <= 2276692 ]\n",
-        "# Check the overview for numerical data\n",
+        "# Check for numerical data\n",
         "df.describe().round()"
       ],
       "execution_count": 15,
@@ -1472,7 +1473,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "lAnerXogoAdX",
-        "outputId": "69732db5-5e56-4fc7-c212-0d6629858f48",
+        "outputId": "d45209a4-8a7d-42c1-f370-f9ca72eaa2fd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1565,7 +1566,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "y8s5HpkbvY_d",
-        "outputId": "e14eeffa-f566-4ab0-8c53-7f2556183193",
+        "outputId": "fa138822-f379-4239-aea1-ad962d0d4947",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -1699,7 +1700,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "Zm9i0Wh0DZVX",
-        "outputId": "2ba2b264-a99f-4d66-9bdc-4f5dd1c27383",
+        "outputId": "cc859ebd-c017-4c5f-f3ea-ef4fe24b4a4b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -1724,7 +1725,7 @@
         "plt.yticks(fontsize=16)\n",
         "plt.show()\n",
         "print('\\n'*1)\n",
-        "print('*'*160)\n",
+        "print('*'*135)\n",
         "print('\\n'*1)\n",
         "\n",
         "# Display top 5 most sold 1-Category for each best store: 1001,1004 & 1012 in the first 2 weeks of August\n",
@@ -1777,7 +1778,7 @@
         "    plt.text(index-0.27,value+50, str(value), fontsize = 13, fontweight ='bold', color ='green')\n",
         "plt.tight_layout()\n",
         "plt.show()\n",
-        "print('-'*160)\n",
+        "print('-'*135)\n",
         "# Plot most sold product for each best stores: 1001,1004 & 1012 in the first 2 weeks of August\n",
         "fig, axes = plt.subplots(nrows=1, ncols=3, figsize=(36,12))\n",
         "## Chart for Store1\n",
@@ -1834,7 +1835,7 @@
           "text": [
             "\n",
             "\n",
-            "****************************************************************************************************************************************************************\n",
+            "***************************************************************************************************************************************\n",
             "\n",
             "\n"
           ],
@@ -1976,7 +1977,7 @@
         {
           "output_type": "stream",
           "text": [
-            "----------------------------------------------------------------------------------------------------------------------------------------------------------------\n"
+            "---------------------------------------------------------------------------------------------------------------------------------------\n"
           ],
           "name": "stdout"
         },
@@ -2043,7 +2044,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "MLL5tdg4vgyB",
-        "outputId": "011f785f-82dd-4444-ab32-a48dca802ec2",
+        "outputId": "56d212a4-793e-4513-8948-1511ada1b5c5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 560
@@ -2056,7 +2057,7 @@
         "print('Most best selling category(Cate-1)in the first 2 weeks of August,2020 is',topcat1.iloc[0,0])\n",
         "print('\\n'*1)\n",
         "print('Below are charts is to display top 10 best selling category(Cate-4) and product in the past time')\n",
-        "print('-'*160)\n",
+        "print('-'*135)\n",
         "# Plot top 10 of 4-Category & product that is best selling in the first 2 weeks of August\n",
         "fig, axes = plt.subplots(nrows=1, ncols=2, figsize=(30,9),facecolor='khaki',edgecolor='k')\n",
         "## Chart for 4-Category\n",
@@ -2103,7 +2104,7 @@
             "\n",
             "\n",
             "Below are charts is to display top 10 best selling category(Cate-4) and product in the past time\n",
-            "----------------------------------------------------------------------------------------------------------------------------------------------------------------\n"
+            "---------------------------------------------------------------------------------------------------------------------------------------\n"
           ],
           "name": "stdout"
         },
@@ -2138,7 +2139,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "KJYpjc1zZOiB",
-        "outputId": "2a9105a5-8919-4714-bfbe-ae12d977b59c",
+        "outputId": "77291435-98f6-4f20-c350-2162a859efd2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 917
@@ -2281,7 +2282,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "J9jvOvqT47Qm",
-        "outputId": "516529e9-62f2-4067-b5d0-11d59e59a1e1",
+        "outputId": "52cd83f0-4221-47d7-d80f-1448371d2bfe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -2290,6 +2291,7 @@
       "source": [
         "# Evaluate sales at 3 areas: North, Middle and South in the first 2 weeks of August\n",
         "sales_at3area=df.groupby('Area').agg({'Str cd':'nunique','Cust card no':'nunique','Order number':'nunique','Sale qty':'sum','Sale amt.1':'sum'}).reset_index()\n",
+        "print('Sales situation at 3 areas: North, Middle and South')\n",
         "display(sales_at3area)\n",
         "fig, ax = plt.subplots(figsize=(18,8),dpi=80, facecolor='khaki',edgecolor='k',num=None)\n",
         "sales_at3area.plot.bar(x = 'Area', y = ['Cust card no', 'Order number'], ax = ax)\n",
@@ -2306,7 +2308,9 @@
         "linechart.set_ylabel('Sale amount',fontsize=20,fontweight='bold')\n",
         "plt.yticks(fontsize=16)\n",
         "plt.show()\n",
-        "print('-'*160)\n",
+        "print('\\n'*1)\n",
+        "print('*'*135)\n",
+        "print('\\n'*1)\n",
         "# Define the living area (network radius) of customers are ordering at the Speed L\n",
         "b=df[df['Area']=='North'].groupby('Delivery distance')['Order number'].nunique().reset_index()\n",
         "c=df[df['Area']=='Middle'].groupby('Delivery distance')['Order number'].nunique().reset_index()\n",
@@ -2318,10 +2322,18 @@
         "c=c.set_index('Delivery distance')\n",
         "d=d.set_index('Delivery distance')\n",
         "e=pd.concat([b.iloc[:,1],c.iloc[:,1],d.iloc[:,1]],axis=1,keys=['North','Middle','South'])\n",
+        "print('Cumulative sum in percentage of Number of orders  by Delivery distance at 3 regions')\n",
         "e"
       ],
-      "execution_count": 24,
+      "execution_count": 25,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Sales situation at 3 areas: North, Middle and South\n"
+          ],
+          "name": "stdout"
+        },
         {
           "output_type": "display_data",
           "data": {
@@ -2410,7 +2422,12 @@
         {
           "output_type": "stream",
           "text": [
-            "----------------------------------------------------------------------------------------------------------------------------------------------------------------\n"
+            "\n",
+            "\n",
+            "***************************************************************************************************************************************\n",
+            "\n",
+            "\n",
+            "Cumulative sum in percentage of Number of orders  by Delivery distance at 3 regions\n"
           ],
           "name": "stdout"
         },
@@ -2579,7 +2596,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 24
+          "execution_count": 25
         }
       ]
     },
@@ -2611,7 +2628,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "CIBnI3mblQ0K",
-        "outputId": "eb64039d-bbb9-409f-f1c1-0e78675c63fc",
+        "outputId": "f1b48daa-597c-44c7-f75b-fb987b922b95",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -2640,7 +2657,7 @@
         "    plt.text(v+0.3, i-.15 , str(v),fontsize = 18, fontweight ='bold', color ='deeppink')\n",
         "plt.margins(0.03)"
       ],
-      "execution_count": 25,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -2712,7 +2729,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "QioP74uX0Ph8",
-        "outputId": "3ee77ed9-3cfc-410f-8c71-cb2eb3011eae",
+        "outputId": "375cef68-d092-4310-e581-5a8aa8229b52",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 912
@@ -2737,7 +2754,7 @@
         "    plt.text(index-0.3,value+0.1, str(value), fontsize = 14, fontweight ='bold', color ='deeppink')\n",
         "plt.margins(0.03)"
       ],
-      "execution_count": 26,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -2800,7 +2817,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "Q0qwTRBIObPF",
-        "outputId": "757d5e24-aa86-4d05-e928-35a9d6fc0e96",
+        "outputId": "7f35e692-f74c-4dde-9822-5e1a34959327",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 497
@@ -2811,7 +2828,7 @@
         "Sales_bydate=df.groupby('Sale dt').agg({'Order number':'nunique','Sale qty':'sum','Sale amt.1':'sum'}).reset_index()\n",
         "Sales_bydate"
       ],
-      "execution_count": 27,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2973,7 +2990,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 27
+          "execution_count": 28
         }
       ]
     },
@@ -2981,7 +2998,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "kaP6r6zGmJVx",
-        "outputId": "f953a357-b2d7-4255-aa96-f4c2dc15eef5",
+        "outputId": "bbd21129-54f1-498f-e715-000511f99f98",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2991,7 +3008,7 @@
         "Sales_bydate = Sales_bydate.set_index('Sale dt')\n",
         "Sales_bydate.index"
       ],
-      "execution_count": 28,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3006,7 +3023,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 28
+          "execution_count": 29
         }
       ]
     },
@@ -3016,17 +3033,17 @@
         "id": "j1yoo9pjpSTy"
       },
       "source": [
-        "# Getting the \"Sale amt.1\" information\n",
+        "# Getting the \"Sale qty\" information\n",
         "Sales_bydate_new=Sales_bydate.iloc[:,1]"
       ],
-      "execution_count": 29,
+      "execution_count": 30,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "H_3BJ296WsxJ",
-        "outputId": "f65cab85-2434-4c9a-f87f-2996e059866e",
+        "outputId": "7ab33e38-ec88-4a48-f8f6-00d698844afc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 502
@@ -3038,7 +3055,7 @@
         "Sales_bydate_new.plot()\n",
         "plt.show()"
       ],
-      "execution_count": 30,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3065,7 +3082,7 @@
         "train= Sales_bydate_new[:int(0.94*(len(Sales_bydate_new)))]\n",
         "test=Sales_bydate_new[int(0.94*(len(Sales_bydate_new))):]"
       ],
-      "execution_count": 31,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -3081,7 +3098,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "oCS0z3P4kiPQ",
-        "outputId": "8b10caf7-1e2d-4d23-b4e1-417c74d3a328",
+        "outputId": "c922b869-f316-49f3-9a04-ceda2d3709ee",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -3095,7 +3112,7 @@
         "# Print out the training summary\n",
         "print(fitted.summary())"
       ],
-      "execution_count": 32,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -3107,8 +3124,8 @@
             "Optimized:                         True   AIC                            267.185\n",
             "Trend:                         Additive   BIC                            274.215\n",
             "Seasonal:                Multiplicative   AICC                               inf\n",
-            "Seasonal Periods:                     7   Date:                 Tue, 10 Nov 2020\n",
-            "Box-Cox:                          False   Time:                         09:52:54\n",
+            "Seasonal Periods:                     7   Date:                 Wed, 11 Nov 2020\n",
+            "Box-Cox:                          False   Time:                         12:42:11\n",
             "Box-Cox Coeff.:                    None                                         \n",
             "=================================================================================\n",
             "                          coeff                 code              optimized      \n",
@@ -3151,14 +3168,14 @@
         "sales_forecast = fitted.forecast(steps=14)\n",
         "sales_forecast.index=sales_forecast.index.astype('str')"
       ],
-      "execution_count": 33,
+      "execution_count": 34,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "iPc59pkFqNii",
-        "outputId": "42ba21d6-71db-4564-8541-692f20176197",
+        "outputId": "2850038c-aa86-4523-8f55-df5108125002",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 669
@@ -3180,7 +3197,7 @@
         "plt.legend(handles=[past, future, predicted_future])\n",
         "plt.show()"
       ],
-      "execution_count": 34,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "display_data",
